# AI-ingestion-project---OPS

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/search/: route.ts
apps/web/src/app/capture/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/records/: page.tsx
apps/web/src/app/retrieve/: page.tsx
apps/web/src/lib/: api-client.ts  supabase.ts  types.ts
docs/adr/: 0001-supabase-for-mvp.md  0002-rls-over-app-level-access.md  0003-model-gateway-built-not-bought.md
docs/runbooks/: local-setup-mac.md  local-setup-windows.md
services/api/: Dockerfile  pyproject.toml
services/api/src/ledger_api/: __init__.py  config.py  main.py
services/api/src/ledger_api/routers/: audit.py  capture.py  health.py  records.py  retrieval.py
supabase/: seed.sql
supabase/migrations/: 20260418_01_enums_and_tables.sql  20260418_02_vector_indexes.sql  20260418_03_audit_log_trigger.sql  20260418_04_rls_policies.sql  20260418_05_dev_seed_helpers.sql
tests/fixtures/: sample-decisions.json
